# TGbot_-Fortune-Telling_Tarot

./: .env  .gitignore  Dockerfile  Pipfile  Procfile  README.md  docker-compose.yml  main.py  pyproject.toml
bot_animation/: animation.py  callbacks.py  keyboards.py
core/: Dockerfile  get_data_from_db.py  parser.py
core/core_bote/: animation.py  callbacks.py  keyboards.py
core/parsers/: parser_descriptions.py  parser_harness.py  parser_img.py  parser_main.py
core/repository/: queries.py
core/services/: queries.py
migrations/: env.py
migrations/versions/: 03c9499f3789_user_model.py  1a3042b7c71d_user_model.py  24cfbc8c0a13_create_models.py  26b9a60b551e_user_model.py  2d9c93ac33b5_user_model.py  31c966ae070a_user_model.py  4974d5ae0917_user_model.py  5bbe2a230b42_.py  5c3700ba8e12_user_model.py  6e8bdc583f4f_user_model.py  75c239d55eea_user_model.py  8035aa51be7d_.py  8a6abc86c17a_.py  9418676f9fab_user_model.py  b3291c59139c_new.py  c0a64251cddf_user_model.py  c1a2ecaaec30_user_model.py  dc10cbd402db_.py  dfcbae81ce08_images_model.py  e10d334213e6_.py  e66fedd60ef1_user_model.py  eabd61d5a909_user_model.py  ee4edf06c506_user_model.py
my_settings/bd/: connection_to_s3.py  models.py  session_to_postgres.py
settings/: config_settings.py
settings/bd/: models.py  session_to_postgres.py
static/: AnimatedStickerHealth.tgs  main.py
volume/cache/: machine.json
volume/logs/: localstack_infra.err
