[tool.poetry]
name = "my-poetry"
version = "0.1.0"
description = ""
authors = ["Den"]
readme = "README.md"
#packages = [{include = "my_poetry"}]

[tool.poetry.dependencies]
python = "^3.11"
pytelegrambotapi = "^4.10.0"
telebot = "^0.0.5"
requests = "^2.28.2"
bs4 = "^0.0.1"
lxml = "^4.9.2"
aiohttp = "^3.8.4"
python-dotenv = "^1.0.0"
pymata-aio = "2.33"
awscli = "^1.27.93"
psycopg2-binary = "^2.9.5"
sqlalchemy = "^2.0.6"
boto3 = "^1.26.94"
alembic = "^1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
